--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     >
       <button slot="ar-button" id="ar-button">View in your space</button>
       <div id="ar-prompt">
-        <img src="assets/charizard.glb" />
+        <img src="assets/hand.png" />
       </div>
 
       <button id="ar-failure">AR is not tracking!</button>
