--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
       autoplay
       auto-rotate
       exposure="1"
-      camera-controls"
+      camera-controls
       src="assets/charizard.glb"
       shadow-intensity="1" 
       touch-action="pan-y"
       ar-modes="webxr scene-viewer" 
+      quick-look
     >
       <button slot="ar-button" id="ar-button">View in your space</button>
       <div id="ar-prompt">
