enable quick-look for ios

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       src="assets/charizard.glb"
       shadow-intensity="1" 
       touch-action="pan-y"
-      ar-modes="webxr scene-viewer" 
+      ar-modes="webxr scene-viewer quick-look" 
       quick-look
     >
       <button slot="ar-button" id="ar-button">View in your space</button>
